--- a/Style.css
+++ b/Style.css
@@ -37,5 +37,17 @@
 
     .Sobre{ /* Estilização do Sobre */
         display: flex;
-        flex-direction: row;
+        margin: 15px;
+
+    
     }
+
+        #sobreTexto{ /* Estilização do texto do sobre */
+            margin: 10px 0px 0px 5px;
+            
+        }
+
+        .Foto{ /* Estilização da foto ao lado do sobre */
+            width: 70%; 
+    
+        }
